--- a/GtalkClient/ChatWindows.xaml
+++ b/GtalkClient/ChatWindows.xaml
@@ -1,7 +1,19 @@
-﻿<Window x:Class="GtalkClient.ChatWindows"
+﻿<Controls:MetroWindow x:Class="GtalkClient.ChatWindows"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="ChatWindows" Height="400" Width="800">
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"              
+        Title="ChatWindows" Height="400" Width="800" WindowStartupLocation="CenterScreen">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="2*"/>
@@ -10,8 +22,9 @@
         <ListBox Grid.Column="0" Name="listBox1" ItemsSource="{Binding}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{Binding Key.Bare}" Foreground="#FFC8AB14" FontSize="24" />
+                    <StackPanel Orientation="Vertical">
+                        <TextBlock Text="{Binding Key.Bare}"/>
+                        <TextBlock Text="{Binding Value.Status}"/>
                     </StackPanel>
                 </DataTemplate>
             </ListBox.ItemTemplate>
@@ -27,4 +40,4 @@
 
 
     </Grid>
-</Window>
+</Controls:MetroWindow>
