--- a/GtalkClient/MainWindow.xaml
+++ b/GtalkClient/MainWindow.xaml
@@ -1,18 +1,41 @@
-﻿<Window x:Class="GtalkClient.MainWindow"
+﻿<Controls:MetroWindow x:Class="GtalkClient.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow"
-        Style="{DynamicResource ResourceKey=MainWindowStyle}">
+        Title="GtalkClient"
+        xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        Style="{DynamicResource ResourceKey=MainWindowStyle}" WindowStartupLocation="CenterScreen" SizeToContent="Height" Width="370">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
-        <StackPanel Width="400" HorizontalAlignment="Center">
-            <Label Content="Connection" HorizontalContentAlignment="Center"/>
-            <Label Content="E-mail" HorizontalAlignment="Left"/>
-            <TextBox  x:Name="email" HorizontalContentAlignment="Center" />
-            <Label Content="Password" HorizontalAlignment="Left" />
-            <PasswordBox x:Name="password" HorizontalContentAlignment="Center" />
-            <Button Click="Connect" Content="Connection" Width="100" HorizontalAlignment="Center"/>
-            <TextBlock x:Name="consoleGtalk" TextWrapping="WrapWithOverflow"  Text="TextBlock"/>
-        </StackPanel>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="70"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="50"/>
+            <RowDefinition Height="30"/>
+            <RowDefinition Height="30"/>
+        </Grid.RowDefinitions>
+        <Label Grid.Column="0" Grid.Row="0" Content="Gtalk Client" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" FontSize="36"/>
+        <Label Grid.Column="0" Grid.Row="1" Margin="10,0,0,0" Content="E-mail" HorizontalAlignment="Left" VerticalContentAlignment="Center"/>
+        <TextBox Grid.Column="0" Grid.Row="2"  x:Name="email" HorizontalContentAlignment="Stretch" />
+        <Label Grid.Column="0" Grid.Row="3" Margin="10,0,0,0" Content="Password" HorizontalAlignment="Left" VerticalContentAlignment="Center" />
+        <PasswordBox Grid.Column="0" Grid.Row="4" x:Name="password" HorizontalContentAlignment="Stretch" />
+        <Button Grid.Column="0" Grid.Row="6" Click="Connect" Content="Connection" HorizontalContentAlignment="Center"/>
+        <CheckBox Content="Remember me" HorizontalAlignment="Left" Margin="10,0,0,0" Grid.Row="5" VerticalAlignment="Center" />
+
     </Grid>
-</Window>
+</Controls:MetroWindow>
