--- a/GtalkClient/ChatWindows.xaml
+++ b/GtalkClient/ChatWindows.xaml
@@ -37,9 +37,10 @@
             <ListBox Grid.Row="0" Name="listBoxConv" ItemsSource="{Binding}">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
-                        <StackPanel Orientation="Vertical">
-                            <TextBlock Text="{Binding From.Bare}"/>
-                            <TextBlock Text="{Binding Body}"/>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{Binding DateTimeStr}" Margin="10,0,10,0"/>
+                            <TextBlock Text="{Binding From.Bare}"  Margin="10,0,10,0"/>
+                            <TextBlock Text="{Binding Body}"  Margin="10,0,10,0"/>
                         </StackPanel>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
