--- a/GtalkClient/ChatWindows.xaml
+++ b/GtalkClient/ChatWindows.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"              
-        Title="ChatWindows" Height="400" Width="800" WindowStartupLocation="CenterScreen">
+        Title="ChatWindows" Height="400" Width="800" WindowStartupLocation="CenterScreen" Activated="App_Activated" Deactivated="App_Deactivated" >
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
